// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea FormInputTextArea render invalid form 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  resize: vertical;
  overflow: hidden;
  width: 100%;
  height: 120px;
  min-height: 48px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #D60000;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  margin-block-end: 8px;
}

.emotion-1 svg {
  fill: #3B3B3B;
}

.emotion-1:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-1:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-2 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  resize: none;
  color: inherit;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-2::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-2::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-2::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-2::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-2:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-2::placeholder {
  color: #6A6A6A;
}

<form
    class="emotion-0"
    novalidate=""
  >
    <div
      class="emotion-1"
    >
      <textarea
        aria-invalid="true"
        class="emotion-2"
        id="mock-nk-1"
        name="name"
        type="text"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextArea FormInputTextArea render valid form 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  resize: vertical;
  overflow: hidden;
  width: 100%;
  height: 120px;
  min-height: 48px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #007B22;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  margin-block-end: 8px;
}

.emotion-1 svg {
  fill: #3B3B3B;
}

.emotion-1:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-1:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-2 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  resize: none;
  color: inherit;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-2::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-2::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-2::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-2::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-2:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-2::placeholder {
  color: #6A6A6A;
}

<form
    class="emotion-0"
    novalidate=""
  >
    <div
      class="emotion-1"
    >
      <textarea
        aria-invalid="false"
        aria-required="true"
        class="emotion-2"
        id="mock-nk-1"
        name="name"
        type="text"
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextArea render default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  resize: vertical;
  overflow: hidden;
  width: 100%;
  height: 120px;
  min-height: 48px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  margin-block-end: 8px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:invalid:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  resize: none;
  color: inherit;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-1:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::placeholder {
  color: #6A6A6A;
}

<div
    class="emotion-0"
  >
    <textarea
      class="emotion-1"
      name="text-area"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea render resize: both 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  resize: both;
  overflow: hidden;
  width: 100%;
  height: 120px;
  min-height: 48px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  margin-block-end: 8px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:invalid:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  resize: none;
  color: inherit;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-1:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::placeholder {
  color: #6A6A6A;
}

<div
    class="emotion-0"
  >
    <textarea
      class="emotion-1"
      name="textArea"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea render resize: horizontal 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  resize: horizontal;
  overflow: hidden;
  width: 100%;
  height: 120px;
  min-height: 48px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  margin-block-end: 8px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:invalid:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  resize: none;
  color: inherit;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-1:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::placeholder {
  color: #6A6A6A;
}

<div
    class="emotion-0"
  >
    <textarea
      class="emotion-1"
      name="textArea"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea render resize: none 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 120px;
  min-height: 48px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  margin-block-end: 8px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:invalid:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  resize: none;
  color: inherit;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-1:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::placeholder {
  color: #6A6A6A;
}

<div
    class="emotion-0"
  >
    <textarea
      class="emotion-1"
      name="textArea"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea render resize: vertical 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  resize: vertical;
  overflow: hidden;
  width: 100%;
  height: 120px;
  min-height: 48px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  margin-block-end: 8px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:invalid:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  resize: none;
  color: inherit;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-1:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::placeholder {
  color: #6A6A6A;
}

<div
    class="emotion-0"
  >
    <textarea
      class="emotion-1"
      name="textArea"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea render size: large 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  resize: vertical;
  overflow: hidden;
  width: 100%;
  height: 120px;
  min-height: 64px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  margin-block-end: 8px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:invalid:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  resize: none;
  color: inherit;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-1:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::placeholder {
  color: #6A6A6A;
}

<div
    class="emotion-0"
  >
    <textarea
      class="emotion-1"
      name="textArea"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea render size: medium 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  resize: vertical;
  overflow: hidden;
  width: 100%;
  height: 120px;
  min-height: 48px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  margin-block-end: 8px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:invalid:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  resize: none;
  color: inherit;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-1:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::placeholder {
  color: #6A6A6A;
}

<div
    class="emotion-0"
  >
    <textarea
      class="emotion-1"
      name="textArea"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea render size: small 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  resize: vertical;
  overflow: hidden;
  width: 100%;
  height: 80px;
  min-height: 40px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #919191;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  margin-block-end: 8px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:focus:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  border-color: transparent;
  background-color: #F1F1F1;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-0:hover:not(:disabled) {
  background-color: #F1F1F1;
}

.emotion-0:valid:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-0:valid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:invalid:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-0:invalid:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  resize: none;
  color: inherit;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 8px;
  padding-inline: 8px;
  padding-block: 8px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-1:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::placeholder {
  color: #6A6A6A;
}

<div
    class="emotion-0"
  >
    <textarea
      class="emotion-1"
      name="textArea"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea render state: disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  resize: vertical;
  overflow: hidden;
  width: 100%;
  height: 120px;
  min-height: 48px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #E2E2E2;
  border-width: 1px;
  border-radius: 8px;
  color: #ABABAB;
  text-overflow: ellipsis;
  margin-block-end: 8px;
}

.emotion-0 svg {
  fill: #ABABAB;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: not-allowed;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  resize: none;
  color: inherit;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-1:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::placeholder {
  color: #6A6A6A;
}

<div
    class="emotion-0"
  >
    <textarea
      class="emotion-1"
      disabled=""
      name="textArea"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea render state: invalid 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  resize: vertical;
  overflow: hidden;
  width: 100%;
  height: 120px;
  min-height: 48px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #D60000;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  margin-block-end: 8px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:hover:not(:disabled) {
  border-color: #D60000;
  background-color: #F1F1F1;
}

.emotion-0:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  resize: none;
  color: inherit;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-1:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::placeholder {
  color: #6A6A6A;
}

<div
    class="emotion-0"
  >
    <textarea
      class="emotion-1"
      name="textArea"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`TextArea render state: valid 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  resize: vertical;
  overflow: hidden;
  width: 100%;
  height: 120px;
  min-height: 48px;
  margin-bottom: 8px;
  background-color: transparent;
  border-style: solid;
  border-color: #007B22;
  border-width: 1px;
  border-radius: 8px;
  color: #3B3B3B;
  text-overflow: ellipsis;
  margin-block-end: 8px;
}

.emotion-0 svg {
  fill: #3B3B3B;
}

.emotion-0:hover:not(:disabled) {
  border-color: #007B22;
  background-color: #F1F1F1;
}

.emotion-0:focus:not(:disabled) {
  border-color: #3768FB;
  background-color: #F1F1F1;
}

.emotion-1 {
  outline: none;
  width: 100%;
  cursor: default;
  border: none;
  background: none;
  box-sizing: border-box;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  resize: none;
  color: inherit;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  padding: 12px;
  padding-inline: 12px;
  padding-block: 12px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::-webkit-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::-moz-placeholder {
  color: #6A6A6A;
}

.emotion-1:-ms-input-placeholder {
  color: #6A6A6A;
}

.emotion-1::placeholder {
  color: #6A6A6A;
}

<div
    class="emotion-0"
  >
    <textarea
      class="emotion-1"
      name="textArea"
      type="text"
    />
  </div>
</DocumentFragment>
`;
